src/snapshots/tptp__tests__fof_plain_term.snap
---
source: src/tests.rs
expression: parsed

---
Constant(
    Constant(
        Functor(
            Lower(
                LowerWord(
                    "c",
                ),
            ),
        ),
    ),
)
