src/snapshots/tptp__tests__fof_quantified_formula-3.snap
---
source: src/tests.rs
expression: parsed

---
QuantifiedFormula {
    quantifier: Exists,
    bound: VariableList(
        [
            Variable(
                UpperWord(
                    "X",
                ),
            ),
            Variable(
                UpperWord(
                    "Y",
                ),
            ),
            Variable(
                UpperWord(
                    "Z",
                ),
            ),
        ],
    ),
    formula: Unitary(
        Atomic(
            Defined(
                Plain(
                    DefinedPlainFormula(
                        Constant(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
