src/snapshots/tptp__tests__fof_quantified_formula.snap
---
source: src/tests.rs
expression: parsed
---
FofQuantifiedFormula {
    quantifier: Forall,
    bound: FofVariableList(
        [
            Variable(
                UpperWord(
                    "X",
                ),
            ),
        ],
    ),
    formula: Unitary(
        Atomic(
            Defined(
                Plain(
                    FofDefinedPlainFormula(
                        FofDefinedPlainTerm(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
