src/snapshots/tptp__tests__fof_system_atomic_formula.snap
---
source: src/tests.rs
expression: parsed
---
SystemAtomicFormula(
    Constant(
        SystemConstant(
            SystemFunctor(
                AtomicSystemWord(
                    DollarDollarWord(
                        LowerWord(
                            "system",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
