src/snapshots/tptp__tests__fof_system_term-3.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "f",
                ),
            ),
        ),
    ),
    FofArguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
        ],
    ),
)
