src/snapshots/tptp__tests__fof_system_term-5.snap
---
source: src/tests.rs
expression: parsed
---
Function(
    SystemFunctor(
        AtomicSystemWord(
            DollarDollarWord(
                LowerWord(
                    "f",
                ),
            ),
        ),
    ),
    Arguments(
        [
            Variable(
                Variable(
                    UpperWord(
                        "X",
                    ),
                ),
            ),
            Function(
                Plain(
                    Function(
                        Functor(
                            Lower(
                                LowerWord(
                                    "g",
                                ),
                            ),
                        ),
                        Arguments(
                            [
                                Variable(
                                    Variable(
                                        UpperWord(
                                            "Y",
                                        ),
                                    ),
                                ),
                            ],
                        ),
                    ),
                ),
            ),
        ],
    ),
)
