src/snapshots/tptp__tests__fof_term.snap
---
source: src/tests.rs
expression: parsed

---
Function(
    Plain(
        Function(
            Functor(
                Lower(
                    LowerWord(
                        "f",
                    ),
                ),
            ),
            Arguments(
                [
                    Variable(
                        Variable(
                            UpperWord(
                                "X",
                            ),
                        ),
                    ),
                ],
            ),
        ),
    ),
)
