src/snapshots/tptp__tests__fof_unary_formula.snap
---
source: src/tests.rs
expression: parsed
---
Unary(
    UnaryConnective,
    Unitary(
        Atomic(
            Defined(
                Plain(
                    DefinedPlainFormula(
                        DefinedPlainTerm(
                            DefinedConstant(
                                DefinedFunctor(
                                    AtomicDefinedWord(
                                        DollarWord(
                                            LowerWord(
                                                "true",
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
