src/snapshots/tptp__tests__fof_unit_formula.snap
---
source: src/tests.rs
expression: parsed
---
Unitary(
    Parenthesised(
        Unitary(
            Atomic(
                Defined(
                    Plain(
                        DefinedPlainFormula(
                            DefinedPlainTerm(
                                DefinedConstant(
                                    DefinedFunctor(
                                        AtomicDefinedWord(
                                            DollarWord(
                                                LowerWord(
                                                    "true",
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
